<resources>
    <string name="app_name">Matbil</string>
    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_anasayfa">Anasayfa</string>
    <string name="uniadi">Eskişehir Osmangazi Üniversitesi</string>
    <string name="bolumadi">Matematik ve Bilgisayar</string>
    <string name="yemekhane">Yemekhane</string>
    <string name="akademik">Akademik Personel</string>
    <string name="duyurular">Duyurular</string>
    <string name="ders">Ders Programı</string>
    <string name="sınav">Sınav Programı</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tel">Telefon</string>
    <string name="adres">Adres</string>
    <string name="web">Web</string>
    <string name="email">Email</string>
    <string name="title_activity_a">a</string>
    <string name="obs">ÖBS</string>
</resources>
