<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cemayan.com.matbil.Anasayfa"
    android:orientation="vertical"
    android:weightSum="4.5"
    android:background="@drawable/fa">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageView2"
            android:background="@drawable/logoo"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1"
            android:background="@color/beyaz"
            android:alpha="0.75">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:background="@color/beyaz"
                android:src="@drawable/duyurulars"
                android:layout_gravity="center"
                android:layout_weight="0.5"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duyurular"
                android:id="@+id/textView2"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1"
            android:background="@color/beyaz"
            android:alpha="0.7">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton2"
                android:src="@drawable/akademikts"
                android:background="@color/beyaz"
                android:layout_gravity="center"
                android:layout_weight="0.5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ders"
                android:id="@+id/textView3"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:weightSum="1"
            android:background="@color/beyaz"
            android:alpha="0.75">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton3"
            android:src="@drawable/akademiks"
            android:layout_gravity="center"
            android:background="@color/beyaz"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/akademik"
            android:id="@+id/textView4"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:textStyle="bold"
            />

            </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:weightSum="1"
            android:background="@color/beyaz"
            android:alpha="0.7">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton5"
                android:src="@drawable/sinavs"
                android:layout_gravity="center"
                android:background="@color/beyaz"
                android:layout_weight="0.5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sınav"
                android:id="@+id/textView6"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:textStyle="bold"
                />


            </LinearLayout>







    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:weightSum="1"
            android:background="@color/beyaz"
            android:alpha="0.7">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton4"
                android:src="@drawable/yemeks"
                android:layout_gravity="center"
                android:background="@color/beyaz"
                android:layout_weight="0.5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yemekhane"
                android:id="@+id/textView5"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:background="@color/beyaz"
            android:weightSum="1"
            android:alpha="0.7">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton33"
                android:src="@drawable/webb"
                android:layout_gravity="center"
                android:background="@color/beyaz"
                android:layout_weight="0.5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obs"
                android:id="@+id/textView44"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>