<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fa"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView6"
            android:src="@drawable/c"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/adres"
            android:gravity="center"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:textColor="@color/metalic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView8" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:src="@drawable/b"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tel"
            android:id="@+id/textView5"
            android:textStyle="bold"
            android:textColor="@color/metalic"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView10" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView9"
            android:src="@drawable/a"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:id="@+id/textView7"
            android:textColor="@color/metalic"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView12"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView10"
            android:src="@drawable/d"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/web"
            android:id="@+id/textView9"
            android:textColor="@color/metalic"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView14" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adres Tarifi"
            android:textColor="@color/beyaz"
            android:textStyle="bold"
            android:id="@+id/button5"
            android:background="@drawable/button"
            android:textSize="25dp" />
    </LinearLayout>

</LinearLayout>
